--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.0-0",
+    "vuetify": "^2.4.8",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
@@ -30,7 +31,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-vuetify": "~2.3.1"
   },
   "eslintConfig": {
     "root": true,
